--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+* {
+  margin: 0 ;
+  padding:0;
   text-align: center;
+  box-sizing: border-box;
 }
 
 .grid{
@@ -10,5 +10,5 @@
   grid-template-columns: 1fr 1fr;
   justify-content: center;
   align-items: center;
-  gap: 24px;
+
 }
