--- a/src/components/Navbar/styles.css
+++ b/src/components/Navbar/styles.css
@@ -1,5 +1,118 @@
 
+@import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;500;600;700&display=swap');
+
 :root{
     --background-color-brown:#8f5d32;
+    --font-Rajdhani: 'Rajdhani', sans-serif;
 }
 
+
+.navbar-container{
+
+    width: 100vw;
+    height:max-content;
+    position: fixed;
+    border:1px solid black;
+ 
+}
+
+.barra-social{
+    background-color: var(--background-color-brown);
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 40px;
+    margin:0 auto;
+    justify-content: center;
+}
+
+.icons-redes,
+.icons-texto{
+    border: 1px solid black;
+    width: 40%;
+    height: 30px;
+    margin:auto 0;
+}
+
+.icons-redes{
+vertical-align: middle;
+ text-align: start;
+
+
+}
+
+
+.icons-redes>img{
+    color:#ffffff;
+    border:white;
+    width:23px;
+    margin: auto 0.5rem;
+}
+
+.icons-texto>h2{
+    font-family: var(--font-Rajdhani);
+    color:#ffffff;
+    font-size: 18px;
+    margin:auto  0;
+    padding:0;
+    text-align: right;
+}
+
+/*=====================================*/
+
+.navbar{
+  
+    display: flex;
+    flex-direction: row;
+    width: 80%;
+    height:max-content;
+    margin: 0 auto;
+}
+
+.logo-teddy,
+.links-nav{
+    width: 50%;
+    height: 80px;
+    border:1px solid black;
+    display: flex;
+    flex-direction: column;
+}
+
+.links-nav>nav{
+    border:1px solid black;
+ margin: auto 0;
+}
+
+.links-nav>nav>ul{
+    display: flex;
+    flex-direction: row;
+    justify-content: end;
+}
+
+.links-nav>nav>ul>li{
+    margin:0 1em;
+    list-style: none;
+
+}
+
+.links-nav>nav>ul>li>a{
+ text-decoration: none;
+ color:black;
+ font-family: var(--font-Rajdhani);
+ font-size: 18px;
+ font-weight: 600;
+    letter-spacing: 1.4px;
+    text-transform: uppercase;
+    transition: all 0.5s ease-in-out;
+}
+
+.links-nav>nav>ul>li>a:hover{
+  color: var(--background-color-brown)
+       
+   }
+
+.logo-teddy>img{
+    width: 150PX;
+    text-align: left;
+    margin: auto 0;
+}
