--- a/src/components/Navbar/styles.css
+++ b/src/components/Navbar/styles.css
@@ -8,7 +8,7 @@
 
 
 .navbar-container{
-
+background-color: #ffffff;
     width: 100vw;
     height:max-content;
     position: fixed;
@@ -52,7 +52,7 @@ vertical-align: middle;
 .icons-texto>h2{
     font-family: var(--font-Rajdhani);
     color:#ffffff;
-    font-size: 18px;
+    font-size: 16px;
     margin:auto  0;
     padding:0;
     text-align: right;
@@ -61,7 +61,7 @@ vertical-align: middle;
 /*=====================================*/
 
 .navbar{
-  
+  background-color: #ffffff;
     display: flex;
     flex-direction: row;
     width: 80%;
@@ -72,7 +72,7 @@ vertical-align: middle;
 .logo-teddy,
 .links-nav{
     width: 50%;
-    height: 80px;
+    height: 75px;
     border:1px solid black;
     display: flex;
     flex-direction: column;
@@ -99,7 +99,7 @@ vertical-align: middle;
  text-decoration: none;
  color:black;
  font-family: var(--font-Rajdhani);
- font-size: 18px;
+ font-size: 20px;
  font-weight: 600;
     letter-spacing: 1.4px;
     text-transform: uppercase;
