--- a/src/components/BannerOne/styles.css
+++ b/src/components/BannerOne/styles.css
@@ -14,7 +14,7 @@
 
 .banner-one{
     width: 100vw;
-    height: 20vh;
+    height:max-content;
     background-color:#f5f5f5 ;
     display: flex;
     flex-direction: row;
@@ -24,10 +24,11 @@
 .option-shop{
     width: 80%;
     height: max-content;
-border: 1px solid  black;
+
     display: flex;
     flex-direction: row;
     margin: auto;
+    padding:4em;
 
 }
 
