--- a/src/components/Footer/styles.css
+++ b/src/components/Footer/styles.css
@@ -24,10 +24,9 @@
 .container-footer{
     width: 80%;
     height: max-content;
-border: 1px solid  black;
     display: flex;
     flex-direction: row;
-    margin:1em auto;
+    margin:2.5em auto;
 
 }
 
@@ -45,7 +44,7 @@ border: 1px solid  black;
 
 .direction{
     display: flex;
-    border: 1px solid black;
+
     margin: 0 auto;
     width: 70%;
     align-items: center;
@@ -56,7 +55,7 @@ border: 1px solid  black;
 .direction>i{
     color:#8f5d32;
  font-size: 30px;
- border: 1px solid black;
+
  width: 40px;
  height: 40px;
  margin-right: 1em;
@@ -67,7 +66,7 @@ border: 1px solid  black;
     margin: 1em 0 0.5em 0;
     font-weight: 600;
     line-height: 1.4;
-    border: 1px solid black;
+  
 
 }
 
@@ -95,9 +94,11 @@ border: 1px solid  black;
     background-color: black;
     color:#ffffff;
     height: 50px;
+    display: flex;
 }
 
 .copyright>h2{
-    margin:0.5em;
+
     font-size: 18px;
+    margin:auto
 }
