--- a/src/components/Navbar/styles.css
+++ b/src/components/Navbar/styles.css
@@ -13,7 +13,7 @@ background-color: #ffffff;
     height:max-content;
     position:fixed;    
     top:0;
-    border:1px solid black;
+ 
  
 }
 
@@ -29,25 +29,37 @@ background-color: #ffffff;
 
 .icons-redes,
 .icons-texto{
-    border: 1px solid black;
+
     width: 40%;
     height: 30px;
     margin:auto 0;
+    display: flex;
 }
 
 .icons-redes{
 vertical-align: middle;
  text-align: start;
 
+ display: flex;
+
+
 
 }
 
 
-.icons-redes>img{
+.icons-redes>i{
     color:#ffffff;
     border:white;
     width:23px;
     margin: auto 0.5rem;
+  
+}
+
+.icons-texto{
+ 
+    display: flex;
+    flex-direction: row;
+    justify-content: end;
 }
 
 .icons-texto>h2{
@@ -56,7 +68,8 @@ vertical-align: middle;
     font-size: 16px;
     margin:auto  0;
     padding:0;
-    text-align: right;
+   
+   
 }
 
 /*=====================================*/
@@ -74,7 +87,7 @@ vertical-align: middle;
 .links-nav{
     width: 50%;
     height: 75px;
-    border:1px solid black;
+
     display: flex;
     flex-direction: column;
 }
@@ -85,7 +98,7 @@ vertical-align: middle;
 }
 
 .links-nav>nav{
-    border:1px solid black;
+
  margin: auto 0;
 }
 
