--- a/src/components/CartWidget/styles.css
+++ b/src/components/CartWidget/styles.css
@@ -12,17 +12,19 @@
 margin-left: 1em;
 }
 
-.container-widget>i{
+.container-widget>.li>i{
     margin:10px auto;
+    text-decoration: none;
+    color:black;
     transition: all 0.5s ease-in-out;
     font-size: 40px;
 }
 
-.container-widget>i:hover{
+.container-widget>.li>i:hover{
     color: var(--background-color-brown);
 }
 
-.container-widget>h2{
+.container-widget>.li>h2{
    color: white;
    border: 1px solid red;
    background-color: red;
