--- a/src/components/Items/styles.css
+++ b/src/components/Items/styles.css
@@ -19,6 +19,11 @@
     height: max-content;
     border:1px solid black;
     margin: auto;
+    transition: all 0.3s ease-in-out;
+}
+
+.item:hover{
+    border:5px solid black;
 }
 
 .item>img{
@@ -46,11 +51,13 @@
     padding:0.5em;
 }
 
-.li>li{
+.link-cart{
  
-    background-color: rgb(128, 3, 3);
+    background-color: #e95d00;
     text-decoration: none!important;
     list-style: none;
+    color:#ffffff;
+    text-decoration: none;
     width: 100%;
     padding:1em;
     font-family: var(--font-Rajdhani);
@@ -59,15 +66,12 @@
     transition: all 0.5s ease-in-out;
 }
 
-.li>li:hover{
+.link-cart:hover{
  
-    background-color: rgb(247, 25, 25);
+    background-color: #ff9225;
 }
 
-.li>.link-cart{
-color:#ffffff;
-    text-decoration: none;
-}
+
 
 .item>.stock{
     background-color: #0693e3;
