--- a/src/components/ItemDetail/styles.css
+++ b/src/components/ItemDetail/styles.css
@@ -60,7 +60,7 @@
   font-weight: 600;
   text-align: justify;
   color: rgb(61, 61, 61);
-  padding:1em;
+  padding:0.5em;
 }
 
 .container-description > .price {
@@ -75,8 +75,49 @@
   background-color: #0693e3;
   color: #ffffff;
   width: 100%;
-  padding: 1em;
+  padding: 0.8em;
   font-family: var(--font-Rajdhani);
   font-size: 20px;
   font-weight: 800;
+}
+
+.botonera{
+  display: flex;
+  flex-direction: row;
+  margin: 0.5em auto;
+}
+.botonera>p{
+  width: 150px;
+  height: 45px;
+  font-size: 2em;
+  
+}
+
+.botonera>button{
+  width: 45px;
+  height: 45px;
+  border:1px solid black;
+  background-color: #ffffff;
+  font-size: 30px;
+  font-weight: 900;
+}
+
+.link-description-cart{
+ 
+  background-color: rgb(172, 2, 2);
+  text-decoration: none!important;
+  list-style: none;
+  color:#ffffff;
+  text-decoration: none;
+  width: 100%;
+  padding:1em;
+  font-family: var(--font-Rajdhani);
+  font-size: 25px;
+  font-weight: 800;
+  transition: all 0.5s ease-in-out;
+}
+
+.link-description-cart:hover{
+
+  background-color: rgb(255, 22, 22);
 }
