--- a/src/components/HeroHome/styles.css
+++ b/src/components/HeroHome/styles.css
@@ -53,7 +53,7 @@
     margin:2em auto;
 }
 
-.texto-hero>a{
+.li-button-shop{
     text-decoration: none;
     color:#ffffff;
     border-radius: 9999px;
