--- a/src/components/ItemDetail/styles.css
+++ b/src/components/ItemDetail/styles.css
@@ -84,18 +84,17 @@
 .botonera{
   display: flex;
   flex-direction: row;
-  margin: 0.5em auto;
+  margin: 0.2em auto;
 }
 .botonera>p{
   width: 150px;
-  height: 45px;
+  height: 25px;
   font-size: 2em;
   
 }
 
-.botonera>button{
-  width: 45px;
-  height: 45px;
+.button-detail{
+
   border:1px solid black;
   background-color: #ffffff;
   font-size: 30px;
