--- a/src/components/Navbar/styles.css
+++ b/src/components/Navbar/styles.css
@@ -83,7 +83,7 @@ vertical-align: middle;
     margin: 0 auto;
 }
 
-.logo-teddy,
+.logo-image-link>img,
 .links-nav{
     width: 50%;
     height: 75px;
