--- a/src/components/Navbar/styles.css
+++ b/src/components/Navbar/styles.css
@@ -83,14 +83,21 @@ vertical-align: middle;
     margin: 0 auto;
 }
 
-.logo-image-link>img,
+.logo-teddy,
 .links-nav{
     width: 50%;
     height: 75px;
-
     display: flex;
     flex-direction: column;
+    justify-content: center;
 }
+
+.image-logo-link{
+    width: 20%;
+    display: flex;
+   margin-top: auto;
+}
+
 
 .links-nav{
     flex-direction: row;
