--- a/src/components/CartListContainer/styles.css
+++ b/src/components/CartListContainer/styles.css
@@ -5,6 +5,7 @@
     height: max-content;
     display: flex;
     flex-direction: column;
+    margin-bottom: 2em;
 }
 .container-cards{
     width: 85vw;
