--- a/src/views/DetailPage/styles.css
+++ b/src/views/DetailPage/styles.css
@@ -8,7 +8,7 @@
 
 .container-detail{
 width: 100vw;
-height: 95vh;
+height: max-content;
 display: flex;
 flex-direction: column;
 justify-content: center;
